--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<nav>
 			<div class="container">
-				<h1><a class="nav-logo" href="./index.html">Hyunkyung</a></h1>
+				<a href="./index.html"><h1 class="nav-logo">Hyunkyung</h1></a>
 				<div class="nav-menu">
 					<ul class="nav-btn">
 						<li>About</li>
@@ -21,9 +21,9 @@
 		</nav>
 		<header>
 			<div class="container">
-				<h2 class="hd-title1">To Infinity</h2>
-				<h2 class="hd-title2">and Beyond</h2>
-				<p class="hd-para"></p>  <!--일단 비워둠-->
+				<p class="hd-title1">To Infinity</p>
+				<p class="hd-title2">and Beyond</p>
+				<p class="hd-para">you've got the whole world in your body</p>
 			
 			</div>
 		</header>
